# genotype-api

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  database.db  genotype.db  out.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: black.yml  build_dockerfile_on_push.yml  build_dockerfile_on_release.yml  deploy_stage.yml  merge_master_ci.yml  pull_request_ci.yml  release_ci.yml  tests_coverage.yaml
alembic/: env.py
alembic/versions/: 7f77cbc00305_change_version_field_type.py  ac3ae4a36f3a_change_version_field_type.py
genotype_api/: __main__.py  app.py  config.py  constants.py  database.db  database.py  excel.py  exceptions.py  match.py  models.py  run.py  security.py  security_dev.py  vcf.py
genotype_api/api/: app.py  middleware.py
genotype_api/api/endpoints/: analyses.py  plates.py  samples.py  sequences.py  snps.py  token.py  users.py
genotype_api/crud/: analyses.py  plates.py  samples.py  snps.py  users.py
genotype_api/database/: base_handler.py  database.py  models.py  store.py
genotype_api/database/crud/: create.py  delete.py  read.py  update.py
genotype_api/database/filter_models/: plate_models.py  sample_models.py
genotype_api/database/filters/: analysis_filter.py  genotype_filters.py  plate_filters.py  sample_filters.py  snp_filters.py  user_filters.py
genotype_api/database/models/: models.py
genotype_api/dto/: analysis.py  dto.py  genotype.py  plate.py  sample.py  snp.py  user.py
genotype_api/endpoints/: analyses.py  plates.py  samples.py  sequences.py  snps.py
genotype_api/file_parsing/: excel.py  files.py  vcf.py
genotype_api/routers/: analyses.py  plates.py  samples.py  sequences.py  snps.py  users.py
genotype_api/schemas/: analysis.py  genotypes.py  plates.py  samples.py  snps.py  users.py
genotype_api/service/match_genotype_service/: match_genotype.py  utils.py
genotype_api/services/analysis_service/: analysis_service.py
genotype_api/services/authentication/: service.py
genotype_api/services/endpoint_services/: analysis_service.py  base_service.py  plate_service.py  sample_service.py  snp_service.py  user_service.py
genotype_api/services/match_genotype_service/: match_genotype.py  utils.py
genotype_api/services/plate_service/: plate_service.py
genotype_api/services/sample_service/: sample_service.py
genotype_api/services/snp_reader/: snp_reader.py
genotype_api/services/snp_reader_service/: snp_reader.py
genotype_api/services/snp_service/: snp_service.py
genotype_api/services/user_service/: user_service.py
tests/: conftest.py  store_helpers.py  test_excel.py  test_genotype.py  test_genotype_api.py  test_store_helpers.py
tests/clients/: test_keycloak_client.py
tests/database/crud/: test_create.py  test_delete.py  test_read.py  test_update.py
tests/database/filters/: test_analysis_filters.py  test_genotype_filters.py  test_plate_filters.py  test_sample_filters.py  test_snp_filters.py  test_user_filters.py
tests/services/: conftest.py  test_authentication_service.py
