[tool.poetry]
name = "genotype-api"
version = "3.0.27"
description = "Genotype-api"
authors = ["Christian Oertlin <c.oertlin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
aiofiles = "*"
bcrypt = "*"
bump2version = "*"
click = "*"
coloredlogs = "*"
cryptography = "*"
email-validator = "*"
fastapi = "*"
google-auth = "*"
gunicorn = "*"
httptools = "*"
numpy = "*"
openpyxl = "*"
passlib = "*"
pydantic = "*"
pydantic-settings = "*"
python = "^3.12"
python-dotenv = "*"
python-jose = {extras = ["cryptography"], version = "*"}
python-multipart = "*"
pyyaml = "*"
requests = "*"
sqlalchemy = {extras = ["asyncio"], version = "*"}
sqlalchemy-utils = "*"
starlette = "*"
uvicorn = "*"
uvloop = "*"
aiomysql = "*"
pytest-asyncio = "*"
tenacity = "*"

[tool.poetry.group.dev.dependencies]
coveralls = "*"
pre-commit = "*"
pytest-cov = "*"
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = ["alembic"]
ignore = ["E501"]